# MyTinyRenderer

./: .gitignore  .gitmodules  BuildProject.bat  CMakeLists.txt  premake5.lua
src/: main.cpp
